# SnapValid

./: .gitignore  README.md  SnapValid.py  _config.yml  build_exe.py  buildcmd.txt  config.json  config.yml  img_utils.py  main.py  ocr_result.txt  operation_log.txt  pyproject.toml  requirements-windows.txt  selector.py
core/: compare.py  engine.py  init.py  keyboard.py  mouse.py  ocr.py  ocr_engine.py  player.py  recorder.py  screenshot_matcher.py  selector.py
scripts/: aaa.json  save_1775040924.json  save_1775041333.json  save_1775042345.json  save_1775043073.json  script_1775033081.json  script_1775033948.json  script_1775034521.json  script_1775036065_28ops.json  script_1775037031_13ops.json  script_1775037037_1ops.json  script_1775037141_23ops.json  script_1775039029_17ops.json  script_1775039400_13ops.json  script_1775040507.json
utils/: config.py  config_utils.py  image.py  init.py  log_utils.py  logger.py  path.py
